# caffe-faster-rcnn

./: Makefile  README.md
data/cifar100/: get_cifar100.sh
examples/: CMakeLists.txt
examples/FRCNN/: loc_test_frcnn.cpp  test_frcnn.cpp  truth_test_frcnn.cpp
examples/FRCNN/config/: face_detection_config.json  imagenetvid_config.json
examples/FRCNN/vgg16/: test_frcnn.sh  train_frcnn.sh
include/api/FRCNN/: frcnn_api.hpp
include/caffe/FRCNN/: frcnn_roi_data_layer.hpp
include/caffe/acceleration/: acc_batch_norm_layer.hpp  acc_bias_layer.hpp  acc_conv_layer.hpp  acc_data_layer.hpp  acc_eltwise_layer.hpp  acc_recover_layer.hpp  acc_relu_layer.hpp  acc_scale_layer.hpp  acc_util.hpp
include/caffe/ex_layers/: binary_softmax_loss.hpp  birelu_layer.hpp  l2_loss_layer.hpp  math_blas.hpp  multi_1_conv_layer.hpp  naive_conv_layer.hpp  single_bn_layer.hpp
matlab/FRCNN/: ILSVRC2015_VID_FRCNN.m
matlab/FRCNN/For_LOC/: Generate_Trecvid_Data.py  (+4 more)
python/ConvertData/: LMDB.py  PadCifar10.py  convert.sh
python/ResNet/: _init_paths.py  acc_gen.py  acc_gen.sh  caffe_solver.py  cifar10_resnet_model.py  find_caffe.py  generate.sh  identity_acc.py  identity_mapping.py  special_net_spec.py  wrap.py  wrap_acc.py  wrap_for_acc.py  wrap_identity_acc.py
src/caffe/: CMakeLists.txt  solver.cpp
src/caffe/FRCNN/: CMakeLists.txt  frcnn_proposal_layer.cu  frcnn_roi_data_layer.cpp  frcnn_vid_data_layer.cpp
src/caffe/FRCNN/util/: CMakeLists.txt
tools/: debug_multiconvolution.cpp  display_resnset_sparse.cpp  test_blas.cpp  time_for_forward.cpp
tools/extra/: plot_training_log.py
(+41 files in other folders)
